--- a/Draft Busts by Position and Round.ipynb
+++ b/Draft Busts by Position and Round.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "9       Disappointing  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
     "\n",
     "plt.xlabel('Round')\n",
     "plt.ylabel('Percentage')\n",
-    "plt.title('Percentage of Disappointing Players (Position: G) by Round')\n",
+    "plt.title('Percentage of Disappointing Players (Position: C) by Round')\n",
     "\n",
     "# Tilt x-axis labels by 45 degrees\n",
     "plt.xticks(rotation=45)\n",
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
     "\n",
     "plt.xlabel('Round')\n",
     "plt.ylabel('Percentage')\n",
-    "plt.title('Percentage of Disappointing Players (Position: LW) by Round')\n",
+    "plt.title('Percentage of Disappointing Players (Position: RW) by Round')\n",
     "\n",
     "# Tilt x-axis labels by 45 degrees\n",
     "plt.xticks(rotation=45)\n",
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
